spec/.test/config/invalid/entry/tags_alias.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [
        'id1' => ['id11', 'id12', 'id13'],
        'id2' => ['id21', [], 'id23'],
        'id3' => ['id31', 'id32','id33'],
    ],
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
